# cvx-sd-skill

./: .gitignore  CLAUDE.md  NOTICE  README.md  SKILL.md  main.py  pyproject.toml
examples/: prep_pvdaq4_daily_y.py  pv_domain.py  pvdaq4_degradation.py
memories/: MEMORY.md  beer-eno-epigraph.md  binding-constraint-hyperparameter-specification.md  collaboration-funnel-author-contact.md  convex-not-brittle-underspecification.md  dogfooding-adaptable-boilerplate.md  exploration-tier-classification-marimo.md  fourier-parameterized-covariance-roadmap.md  graceful-degradation-model-capability.md  hourly-load-worked-example.md  irl1-iteratively-reweighted-l1.md  meta-pattern-convex-substrate-skill-family.md  soiling-sawtooth-composability-example.md  tier3-structural-tuning-examples.md  trend-seasonal-confound-record-length.md
plans/: notes-offset-identifiability.md  notes-spcqe-multiperiod.md  notes-vision-and-scope.md  notes-working-practices.md  signal-decomposition-skill.md
reference/: component-catalog.md  diagnostics.md  formulation.md  marimo.md
scratch/: README.md  make_synthetic_hourly.py  plot_synthetic_decomp.py  visual_heatmap.py  visual_reporting.py
scripts/: basis.py  components.py  data_fidelity.py  decompose.py  periodic.py
src/signaldecomp/: __init__.py  components.py  data_fidelity.py  decompose.py  heatmap.py  periodic.py  reporting.py  spline.py  time_axis.py  transform.py  (+1 more)
tests/: test_components.py  test_decompose.py  test_exog.py  test_heatmap.py  test_periodic.py  test_reporting.py  test_time_axis.py  test_transform.py  test_validation.py
