[project]
name = "cvx-sd-skill"
version = "0.1.0"
description = "Convex signal decomposition for scalar time series (CVXPY)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.9.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signaldecomp"]

[dependency-groups]
dev = ["pytest>=8.0"]
examples = [
    "marimo>=0.23.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
